# openapi.yaml
@@ -75,6 +75,28 @@ paths:
               schema:
                 $ref: "#/components/schemas/Ride"
 
+  /coasters:
+    get:
+      operationId: searchCoaster
+      summary: List coaster & park, based on search
+      parameters:
+        - name: q
+          in: query
+          required: true
+          description: the query which users are searching for, returns a coaster reference
+          example: kingda ka
+          schema:
+            type: string
+            minLength: 1
+            maxLength: 256
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Coasters"
+
 components:
   schemas:
 
